# ConcreteStrengthPredictor

./: .replit  DOWNLOAD_GUIDE.md  README.md  android_app.py  app.py  buildozer.spec  data_loader.py  database.py  flask_app.py  install.py  install_requirements.txt  main.py  ml_model.py  pyproject.toml  replit.md  requirements.txt  standalone_app.py  utilities.py
attached_assets/: Concrete_Data_1752784302540.xls  concrete-strength_1752784302541.ipynb  concrete_strength_ml_data_1752784302540.npz  predict_1752784302541.ipynb  utilities_1752784302541.py
templates/: index.html
