[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "buildozer>=1.5.0",
    "kivy>=2.3.1",
    "kivymd>=1.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
]
